--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,3 +3,10 @@
 @tailwind utilities;
 
 @import './general-sans.css';
+
+body {
+  @apply bg-slate-100;
+  background-image: radial-gradient(theme('colors.slate.400') 1px, transparent 0); 
+  background-size: 30px 30px;
+  background-position: -19px -19px;
+}
