--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,6 +70,25 @@ body {
   } */
 }
 
+@utility prose-reversed {
+  --tw-prose-headings: var(--color-white);
+  --tw-prose-lead: var(--color-white);
+  --tw-prose-body: var(--color-white);
+  --tw-prose-links: var(--color-white);
+  --tw-prose-bold: var(--color-white);
+  --tw-prose-counters: var(--color-white);
+  --tw-prose-bullets: var(--color-white);
+  --tw-prose-hr: var(--color-white);
+  --tw-prose-quotes: var(--color-white);
+  --tw-prose-quote-borders: var(--color-white);
+  --tw-prose-captions: var(--color-white);
+  --tw-prose-code: var(--color-white);
+  --tw-prose-pre-code: var(--color-white);
+  --tw-prose-pre-bg: var(--color-white);
+  --tw-prose-th-borders: var(--color-white);
+  --tw-prose-td-borders: var(--color-white);
+}
+
 @layer base {
   * {
     @apply border-border;
